Overflow in span tag fixed again

--- a/index.css
+++ b/index.css
@@ -84,7 +84,8 @@ button{
 
 }
 span{
-    overflow: auto;
+    word-break: break-all;
+    width: 90%;
 }
 
 @media(max-width: 700px){
